# SEL

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: debug_task.py  run_pipeline.py  test_retrieval.py
src/faiss/: __init__.py
src/sel/agentic/: __init__.py  agent.py  controller.py  interface.py  policy_utils.py
src/sel/cit/: __init__.py  embedding_model.py  evaluator.py  loss.py  sampler.py  trainer.py
src/sel/critic/: __init__.py  base_critic.py  llm_critic.py  rule_based.py  schema.py  template_bank.py
src/sel/goals/: __init__.py  encoder.py  generator.py  goal_schema.py  memory_bank.py  planner.py
src/sel/logging/: __init__.py  replay_loader.py  task_logger.py  trace_schema.py  writer.py
src/sel/memory/: __init__.py  cache.py  filter.py  manager.py  memory_bank.py  retriever.py  schema.py
src/sel/meta/: __init__.py  adaptation.py  curriculum.py  curriculum_state.py  metrics.py  monitor.py  (+3 more)
src/sentence_transformers/: __init__.py
src/torch/: __init__.py
tests/: conftest.py
tests/test_agentic/: test_agent.py  test_controller.py
tests/test_cit/: test_loss.py
tests/test_critic/: test_critic_agent.py
tests/test_goals/: test_counterfactual_generator.py  test_generator.py  test_planner.py
tests/test_logging/: test_replay_loader.py  test_task_logger.py
tests/test_memory/: test_manager.py
tests/test_meta/: test_curriculum_manager.py  test_loop.py  test_metrics.py
tests/test_orchestrator/: test_pipeline.py
tests/test_rat/: test_retriever.py
tests/test_refinement/: test_critic.py  test_refine_loop.py  test_scorer.py
(+25 files in other folders)
